# ubraw

./: CMakeLists.txt  CMakePresets.json
Modules/: CMakeLists.txt  Finduboonedaq.cmake
test/test_fcl/: CMakeLists.txt  test_fcl_ubraw.sh
uboone/RawData/utils/job/: reco_uboone_data_notpc.fcl  swizzle_bnb_hsnc0_stream.fcl  swizzle_bnb_hsnc0_stream_crt_merge_extra_v06_26_01_26.fcl  swizzle_bnb_stream.fcl  swizzle_bnb_stream_crt_merge_extra_v06_26_01_13.fcl  swizzle_bnb_stream_crt_merge_extra_v06_26_01_26.fcl  swizzle_bnb_stream_crt_merge_v06_26_01_13.fcl  swizzle_bnb_stream_crt_merge_v06_26_01_26.fcl  swizzle_bnb_stream_optfilter.fcl  swizzle_bnb_stream_optfilter_crt_merge_v06_26_01_13.fcl  swizzle_bnb_unbiased_stream_crt_merge_extra_v06_26_01_13.fcl  swizzle_bnb_unbiased_stream_crt_merge_v06_26_01_13.fcl  swizzle_bnb_unbiased_stream_crt_merge_v06_26_01_26.fcl  swizzle_crt_merge_extra_v06_26_01_13.fcl  swizzle_ext_bnb_stream.fcl  swizzle_ext_bnb_stream_crt_merge_extra_v06_26_01_13.fcl  swizzle_ext_bnb_stream_crt_merge_extra_v06_26_01_26.fcl  swizzle_ext_bnb_stream_crt_merge_v06_26_01_13.fcl  swizzle_ext_hsnc0_stream.fcl  swizzle_ext_hsnc0_stream_crt_merge_extra_v06_26_01_26.fcl  swizzle_ext_hsnc0_stream_crt_merge_v06_26_01_13.fcl  swizzle_ext_hsnc0_stream_crt_merge_v06_26_01_26.fcl  swizzle_ext_numi_stream_crt_merge_extra_v06_26_01_13.fcl  swizzle_ext_numi_stream_crt_merge_extra_v06_26_01_26.fcl  swizzle_ext_unbiased_stream_crt_merge_extra_v06_26_01_13.fcl  swizzle_ext_unbiased_stream_crt_merge_extra_v06_26_01_26.fcl  swizzle_ext_unbiased_stream_crt_merge_v06_26_01_13.fcl  swizzle_mucs_stream.fcl  swizzle_mucs_stream_crt_merge_extra_v06_26_01_26.fcl  swizzle_mucs_stream_crt_merge_v06_26_01_13.fcl  swizzle_mucs_stream_crt_merge_v06_26_01_26.fcl  swizzle_nopmt.fcl  swizzle_notpc_stream.fcl  swizzle_notpc_stream_crt_merge_v06_26_01_13.fcl  swizzle_notpc_stream_crt_merge_v06_26_01_26.fcl  swizzle_numi_stream_crt_merge_extra_v06_26_01_13.fcl  swizzle_numi_stream_crt_merge_v06_26_01_13.fcl  swizzle_numi_unbiased_stream.fcl  swizzle_numi_unbiased_stream_crt_merge_v06_26_01_13.fcl  swizzle_software_trigger_streams.fcl  (+14 more)
ubraw/: CMakeLists.txt
ubraw/BeamAna/: BeamAna_module.cc  CMakeLists.txt
ubraw/BeamDAQ/: CMakeLists.txt  bdaq_readraw.cpp  beamDAQConfig.cpp  beamIFDBInterface.cpp  beamRun.cpp  beamdaq_config.fcl
ubraw/BeamData/: BeamDataQualityFilter_module.cc  BeamData_module.cc  CMakeLists.txt  beamdata_microboone.fcl  beamdataquality.fcl  bnbAutoTune.cxx  bnbAutoTune.h  getFOM.cxx  getFOM2.cxx  getFOM2.h
ubraw/RawData/: CMakeLists.txt
ubraw/RawData/supernova/: CMakeLists.txt  SnFileSourceDriver.cc  SnFileSourceDriver.h  SnRecordHolder.cc  SnRecordHolder.h
ubraw/RawData/supernova/job/: supernova-swizzle.fcl
ubraw/RawData/utils/: CMakeLists.txt  GPSOffsetAna_module.cc  LArRawInputDriverUBooNE.cxx  LArRawInputDriverUBooNE.h  LArRawInputSourceUBooNE_source.cc  RawDigitSaver_module.cc  RawDigitWriter_module.cc  TimeDumper_module.cc  TriggerDumper_module.cc  TriggerEnforcement_module.cc  rawtorootconvert.fcl  uboone_rawdigit_writer.fcl  uboone_rawdigit_writer_fromraw.fcl
ubraw/RawData/utils/job/: dump_time.fcl  dump_time_binary.fcl  dump_time_binary_update.fcl  dump_triggers_binary.fcl  gps_offset.fcl  gps_offset_binary.fcl  gps_offset_binary_update.fcl  nearline_swtrigger_monitor.fcl  reco_uboone_data_notpc.fcl  swizzle.fcl  swizzle_bnb+ext_bnb_stream.fcl  swizzle_bnb+ext_bnb_stream_crt_merge_extra_v06_26_01_13.fcl  swizzle_bnb+ext_bnb_stream_crt_merge_extra_v06_26_01_13_33_nomerge.fcl  swizzle_bnb+ext_bnb_stream_crt_merge_extra_v06_26_01_13_nomerge.fcl  swizzle_bnb+ext_bnb_stream_crt_merge_extra_v06_26_01_26.fcl  swizzle_bnb+ext_bnb_stream_crt_merge_extra_v06_26_01_26_nomerge.fcl  swizzle_bnb+ext_bnb_stream_crt_merge_extra_v06_26_01_33_nomerge.fcl  swizzle_bnb+ext_bnb_stream_crt_merge_v06_26_01_13.fcl  swizzle_bnb+ext_bnb_stream_crt_merge_v06_26_01_13_33_nomerge.fcl  swizzle_bnb+ext_bnb_stream_crt_merge_v06_26_01_13_nomerge.fcl  swizzle_bnb+ext_bnb_stream_crt_merge_v06_26_01_26.fcl  swizzle_bnb+ext_bnb_stream_crt_merge_v06_26_01_26_nomerge.fcl  swizzle_bnb+ext_bnb_stream_crt_merge_v06_26_01_33_nomerge.fcl  swizzle_bnb+ext_bnb_stream_nomerge.fcl  swizzle_bnb_hsnc0_stream.fcl  swizzle_bnb_hsnc0_stream_crt_merge_extra_v06_26_01_13.fcl  swizzle_bnb_hsnc0_stream_crt_merge_extra_v06_26_01_26.fcl  swizzle_bnb_hsnc0_stream_crt_merge_v06_26_01_13.fcl  swizzle_bnb_hsnc0_stream_crt_merge_v06_26_01_26.fcl  swizzle_bnb_stream.fcl  swizzle_bnb_stream_crt_merge_extra_v06_26_01_13.fcl  swizzle_bnb_stream_crt_merge_extra_v06_26_01_26.fcl  swizzle_bnb_stream_crt_merge_v06_26_01_13.fcl  swizzle_bnb_stream_crt_merge_v06_26_01_26.fcl  swizzle_bnb_stream_optfilter.fcl  swizzle_bnb_stream_optfilter_crt_merge_extra_v06_26_01_13.fcl  swizzle_bnb_stream_optfilter_crt_merge_extra_v06_26_01_26.fcl  swizzle_bnb_stream_optfilter_crt_merge_v06_26_01_13.fcl  swizzle_bnb_stream_optfilter_crt_merge_v06_26_01_26.fcl  swizzle_bnb_unbiased_stream.fcl  (+94 more)
ups/: product_deps
